add rolling msg

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </video>
     </div>
     <div class="text-container">
-        <h1 id="reclaim-text">UNFU*K YOUR LIFE</h1>
-    </div>
+        <h1 id="reclaim-text">UNFU*K YOUR <span id="rolling-text">LIFE</span></h1>
+    </div>    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="script.js"></script>
