--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
             Your browser does not support the video tag.
         </video>
     </div>
+
+    <div class="info-container">
+        <img src="logo.svg" alt="App Logo" id="app-logo" />
+        <h2 id="app-name">DigiPaws</h2>
+        <button class="explosion-button">Explore More</button>
+    </div>
+
+    
     <div class="text-container">
-        <h1 id="reclaim-text">UNFU*K YOUR <span id="rolling-text">LIFE</span></h1>
+        <h1 id="reclaim-text">UNFU*K <br> YOUR <br> <span id="rolling-text">LIFE</span></h1>
     </div>    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
