add button animation

--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         </video>
     </div>
 
-    <div class="info-container">
-        <img src="logo.svg" alt="App Logo" id="app-logo" />
-        <h2 id="app-name">DigiPaws</h2>
-        <button class="explosion-button">Explore More</button>
+
+
+    <div class="background-animation">
+        <div class="info-container">
+            <img src="logo.svg" alt="App Logo" id="app-logo" />
+            <h1 id="app-name">DIGIPAWS</h1>
+            <p id="app-desc">THE WORLD'S MOST POWERFUL SCREEN TIME TOOL</p>
+            <button class="glow-on-hover" type="button">Pre-Register</button>
+        </div>
     </div>
+
 
     
     <div class="text-container">
