added please wait msg

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="loading-text">
+        Please wait...
+    </div>
+
     <div class="video-container">
-        <video id="doomscrolling-video" autoplay muted playsinline>
+        <video id="doomscrolling-text" autoplay muted playsinline>
             <source src="doomscrolling.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
-
-
 
     <div class="background-animation">
         <div class="info-container">
