add "don't start scrolling here" message

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <h1 id="reclaim-text">UNFU*K <br> YOUR <br> <span id="rolling-text">LIFE</span></h1>
     </div>    
 
+    <div id="scroll-message" class="scroll-message">
+        Enough of doomscrolling, now don't start it here too!
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="script.js"></script>
 </body>
