add social links to homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -29,6 +30,11 @@
             <img src="logo.svg" alt="App Logo" id="app-logo" />
             <h1 id="app-name">DIGIPAWS</h1>
             <p id="app-desc">THE WORLD'S MOST POWERFUL SCREEN TIME TOOL</p>
+            <div class="social-links">
+                <a href="https://github.com/nethical6/digi-paws/" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/digipaws.app" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://discord.com/invite/Vs9mwUtuCN" target="_blank"><i class="fab fa-discord"></i></a>
+                 </div>
             <button class="glow-on-hover" type="button">Pre-Register</button>
         </div>
     </div>
