fix font sizing

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="info-container">
             <img src="logo.svg" alt="App Logo" id="app-logo" />
             <h1 id="app-name">DIGIPAWS</h1>
-            <p id="app-desc">THE WORLD'S MOST POWERFUL SCREEN TIME TOOL</p>
+            <p id="app-desc">World's most powerful<br>Screentime Management System</p>
             <div class="social-links">
                 <a href="https://github.com/nethical6/digi-paws/" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.instagram.com/digipaws.app" target="_blank"><i class="fab fa-instagram"></i></a>
