--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DigiPaws</title>
+    <link rel="stylesheet" href="homepage/style.css">
     <link rel="stylesheet" href="style.css">
-            <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,10 +21,10 @@
             </div>
             <nav class="nav-links">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Features</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="./about/index.html">About</a></li>
+                    <li><a href="./features/index.html">Features</a></li>
+                    <li><a href="./contact/index.html">Contact</a></li>
                     <br>
                         <li class="nav-social-link"><a href="https://github.com/nethical6/digi-paws/" target="_blank">GitHub</a></li>
                         <li class="nav-social-link"><a href="https://www.instagram.com/digipaws.app" target="_blank">Instagram</a></li>
@@ -61,7 +61,7 @@
                 <a href="https://www.instagram.com/digipaws.app" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://discord.com/invite/Vs9mwUtuCN" target="_blank"><i class="fab fa-discord"></i></a>
                  </div>
-            <button class="glow-on-hover" type="button">Pre-Register</button>
+            <button class="glow-on-hover" id="pre-register" type="button">Pre-Register</button>
         </div>
     </div>
 
@@ -76,6 +76,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="script.js"></script>
+    <script src="homepage/script.js"></script>
 </body>
 </html>
