--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <nav class="nav-links">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="./about/index.html">About</a></li>
                     <li><a href="./features/index.html">Features</a></li>
                     <li><a href="./contact/index.html">Contact</a></li>
