fix spacing in about page

--- a/about/index.html
+++ b/about/index.html
@@ -37,9 +37,9 @@
         <p id="page-main-desc">Our non-profit mission is to create<br> tools that help you navigate<br> and improve your life in the modern world.</p>
     <br>
     <div class="cover-embed">
-       <iframe src="https://giphy.com/embed/Ib9F0PHGlKxSBMzBsY" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/phone-smartphone-cellphone-Ib9F0PHGlKxSBMzBsY">via GIPHY</a></p>
+        <iframe src="https://giphy.com/embed/Ib9F0PHGlKxSBMzBsY" width="300" height="300" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/phone-smartphone-cellphone-Ib9F0PHGlKxSBMzBsY">via GIPHY</a></p>
     </div>
-    <p class="cover-desc">Founded in late April 2024, DigiPaws is an open-source, free platform created by Nethical, a 16-year-old developer with a passion for addressing one of today's most pressing and often overlooked issues: "Screen Addiction." DigiPaws is designed to help individuals of all age groups regain control over their digital habits through innovative, research-driven strategies.
+        <p class="cover-desc">Founded in late April 2024, DigiPaws is an open-source, free platform created by Nethical, a 16-year-old developer with a passion for addressing one of today's most pressing and often overlooked issues: "Screen Addiction." DigiPaws is designed to help individuals of all age groups regain control over their digital habits through innovative, research-driven strategies.
 
         Our platform combines the power of technology with behavioral science to offer unique features like versatile blockers, gamified challenges, and personalized modes of operation. These tools are designed to disrupt addictive patterns and promote healthier screen usage. We are committed to continuously evolving our platform, experimenting with new approaches, and engaging with our community to create the most effective solutions to beat screen addiction.
         
