--- a/features/index.html
+++ b/features/index.html
@@ -15,7 +15,7 @@
             <nav class="nav-links">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="../about/index.html">About</a></li>
                     <li><a href="../features/index.html">Features</a></li>
                     <li><a href="../contact">Contact</a></li>
                     <br>
