--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
         </video>
     </div>
 
-    <div class="background-animation">
+    <div id="circles-container">
+    </div>
         <div class="info-container">
             <img src="logo.svg" alt="App Logo" id="app-logo" />
             <h1 id="app-name">DIGIPAWS</h1>
-            <p id="app-desc">World's most powerful<br>Screentime Management System</p>
+            <p id="app-desc">The world's most powerful<br>Screentime Management System</p>
             <div class="social-links">
                 <a href="https://github.com/nethical6/digi-paws/" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.instagram.com/digipaws.app" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -63,7 +64,6 @@
                  </div>
             <button class="glow-on-hover" id="pre-register" type="button">Pre-Register</button>
         </div>
-    </div>
 
 
     
