--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="./about/index.html">About</a></li>
-                    <li><a href="./features/index.html">Features</a></li>
-                    <li><a href="./contact/index.html">Contact</a></li>
-                    <br>
-                        <li class="nav-social-link"><a href="https://github.com/nethical6/digi-paws/" target="_blank">GitHub</a></li>
+                    <li><a href="https://github.com/nethical6/digipaws">Github</a></li>
+                    <li><a href="https://discord.com/invite/Vs9mwUtuCN">Discord</a></li>
+                    <br> 
                         <li class="nav-social-link"><a href="https://www.instagram.com/digipaws.app" target="_blank">Instagram</a></li>
-                        <li class="nav-social-link"><a href="https://discord.com/invite/Vs9mwUtuCN" target="_blank">Discord</a></li>
+                         
                     
                 </ul>
             </nav>
