redirect to homepage on click icon

--- a/about/index.html
+++ b/about/index.html
@@ -9,8 +9,8 @@
 <body>
     <header class="header">
         <div class="navbar">
-            <div class="logo">
-                <a><img src="../logo.svg" alt="App Logo" id="app-logo-nav" /></a>
+            <div>
+                <a href="../index.html"><img src="../logo.svg" alt="App Logo" id="app-logo-nav" /></a>
             </div>
             <nav class="nav-links">
                 <ul>
