--- a/help/workout/index.html
+++ b/help/workout/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="navbar">
             <div class="logo">
-                <a><img src="../../logo.svg" alt="App Logo" id="app-logo-nav" /></a>
+                <a href="../../index.html"><img src="../../logo.svg" alt="App Logo" id="app-logo-nav" /></a>
             </div>
             <nav class="nav-links">
                 <ul>
