--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -9,13 +9,13 @@
 <body>
     <header class="header">
         <div class="navbar">
-            <div class="logo">
-                <a><img src="../logo.svg" alt="App Logo" id="app-logo-nav" /></a>
+            <div class="logo" onclick="window.open('../index.html', '_blank') ">
+                <a href="../index.html"><img src="../logo.svg" alt="App Logo" id="app-logo-nav" /></a>
             </div>
             <nav class="nav-links">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="../about/index.html">About</a></li>
                     <li><a href=".https://github.com/nethical6/digipaws">Github</a></li>
                     <li><a href="https://discord.com/invite/Vs9mwUtuCN">Discord</a></li>
                     <br>
