--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About</a></li>
-                    <li><a href=".https://github.com/nethical6/digipaws">Github</a></li>
+                    <li><a href="https://github.com/nethical6/digipaws">Github</a></li>
                     <li><a href="https://discord.com/invite/Vs9mwUtuCN">Discord</a></li>
                     <br>
                         <li class="nav-social-link"><a href="https://www.instagram.com/digipaws.app" target="_blank">Instagram</a></li>
