add playstore link

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     </header>
 
     <div class="loading-text">
-        Please wait...
+        Please wait... 
     </div>
 
     <div class="video-container">
         <video id="doomscrolling-text" autoplay muted playsinline>
             <source src="doomscrolling.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+            Your browser does not support the video tag. Please wait without refreshing for a few secs.
         </video>
     </div>
 
@@ -60,7 +60,7 @@
                 <a href="https://www.instagram.com/digipaws.app" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://discord.com/invite/Vs9mwUtuCN" target="_blank"><i class="fab fa-discord"></i></a>
                  </div>
-            <button class="glow-on-hover" id="pre-register" type="button">Pre-Register</button>
+            <button class="glow-on-hover" id="pre-register" type="button">Download For Android</button>
         </div>
 
 
